# flagsparse

./: .gitignore  LICENSE  README.md  README_cn.md  pyproject.toml  setup.py
benchmark/: benchmark_gather.py  benchmark_scatter.py  benchmark_spmm.py  benchmark_spmv.py  submit_spgemm_h100.sbatch
src/flagsparse/: __init__.py  sparse_formats.py
src/flagsparse/sparse_operations/: __init__.py  _common.py  benchmarks.py  gather_scatter.py  sddmm_csr.py  spgemm_csr.py  spmm_coo.py  spmm_csr.py  spmv_coo.py  spmv_csr.py  spsv.py
tests/: test_gather.py  test_scatter.py  test_sddmm.py  test_sddmm_f32_diag.py  test_sddmm_f32or64.py  test_spgemm.py  test_spmm.py  test_spmm_coo.py  test_spmm_opt.py  test_spmv.py  test_spmv_coo.py  test_spmv_opt.py  test_spsv.py
