[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flagsparse"
version = "1.0.0"
description = "FlagSparse - GPU sparse operations package"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
authors = [{ name = "Your Name", email = "your.email@example.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[project.urls]
Homepage = "https://github.com/yourusername/flagsparse"
Repository = "https://github.com/yourusername/flagsparse"

[tool.setuptools.packages.find]
where = ["src"]
